# simple-ray-tracer

./: CMakeLists.txt  main.cpp
classes/figures/: Mesh.cpp  Plane.cpp  Sphere.cpp  Triangle.cpp
classes/lights/: DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp
classes/ray/: Ray.cpp
classes/scene/: Camera.cpp  Renderer.cpp  Scene.cpp  SceneParser.cpp
classes/vector3d/: Vector3D.cpp
include/: Camera.h  Figures.h  Lights.h  Ray.h  Renderer.h  Scene.h  SceneObject.h  Vector3D.h  constants.h  utils.h
resources/scenes/: example_scene.txt
utils/: color_utils.cpp  reflection_refraction_calculation_utils.cpp
